# prompt_engineering_playground

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json  run_prompts_api.sh  test_prompts.txt  verify_loki.sh
.github/actions/setup-python-uv/: action.yml
.github/workflows/: cd-ec2-gpu.yml  cd-ec2.yml  ci.yml
adapters/: gemini_conn.py  openai_adapter.py  openai_conn.py  vllm_conn.py  vllm_conn_off.py
api/: README.md  adapter_test.py  main.py  main_with_logging.py  prompts.py
config/: gradio_templates.yaml  load_models_config.py  models.yaml  tools.yaml  vllm_config_llama.yaml  vllm_config_qwen.yaml
examples/: test_prompts_api.py  test_prompts_api.sh
experiments/: cli_router_test.py  gradio_test.py
infra/: Dockerfile.mlflow  bootstrap_docker.sh  docker-compose-prod.yml  docker-compose.yml
infra/db_init/: 00_db_init.sh  01_create_app_tables.sh  02_insert_app_data.sh  03_create_views.sh  04_grant_permissions.sh
infra/deploy/: docker-compose-prod.yml  ec2-gpu-deploy.sh  ec2_deploy.sh  pep.conf  vllm-docker-compose-prod.yml
infra/docker_images/: Dockerfile.base  Dockerfile.mlflow
infra/minio_init/: 00_minio_init.sh
infra/monitoring/: loki-config.yaml  otel-collector.yaml  prometheus.yml  tempo.yaml
infra/monitoring/grafana/dashboards/: PEP Historical Analytics-1765189691630.json  PEP Metrics (Real-time)-1765189706142.json
infra/monitoring/grafana/provisioning/dashboards/: dashboards.yml
infra/monitoring/grafana/provisioning/datasources/: grafana-datasources.yaml
infra/shell_scripts/: bootstrap_docker.sh  pgbouncer-entrypoint.sh
models/: prompts.py  runs.py
schemas/: prompts.py  schemas.py
services/: errors.py  gunicorn.conf.py  llm_tools.py  prompts_service.py  router.py  runs_logger.py
tests/: test_api_resilience.py  test_hello.py  test_rendering.py
ui/: app.py  styles.py
utils/: delimiter_utils.py  errors.py  feedback_utils.py  http.py  jinja_renderer.py  load_configs.py  logger_new.py  logging.py  message_utils.py  model_params_utils.py  otel_config.py  otel_metrics.py  prompts_client.py  render_formatters.py  response_schema_utils.py  retry.py  session_utils.py  sse.py  ui_formatters.py
