[project]
name = "prompt-eng-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "google-genai>=1.32.0",
    "gradio>=5.47.1",
    "gunicorn>=23.0.0",
    "huggingface-hub[cli]>=0.34.4",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "mlflow-tracing>=3.4.0",
    "openai>=1.102.0",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.37.0",
    "opentelemetry-exporter-otlp-proto-http>=1.37.0",
    "opentelemetry-instrumentation>=0.58b0",
    "opentelemetry-instrumentation-asgi>=0.58b0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-httpx>=0.58b0",
    "opentelemetry-instrumentation-requests>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "vllm[auto,torch-backend]>=0.10.2",
]

# vllm[torch-backend,auto]
