[project]
name = "prompt-engineering-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-exporter-otlp>=1.39.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "opentelemetry-instrumentation>=0.60b0",
    "opentelemetry-instrumentation-httpx>=0.60b0",
    "opentelemetry-instrumentation-requests>=0.60b0",
    "opentelemetry-sdk>=1.39.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
api = [
    "alembic>=1.17.0",
    "fastapi>=0.124.2",
    "gunicorn>=23.0.0",
    "mlflow-tracing>=3.4.0",
    "opentelemetry-instrumentation-asgi>=0.58b0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
dev = [
    "ipykernel>=7.1.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]
providers-api = [
    "google-genai>=1.32.0",
    "openai>=1.102.0",
]
providers-local = [
    "huggingface-hub[cli]>=0.34.4",
    "vllm[auto,torch-backend]>=0.10.2",
]
ui = [
    "gradio==5.47.1",
    "httpx>=0.28.1",
]

[tool.ruff]
# Line length (matches common Python style)
line-length = 100

# Target Python version
target-version = "py312"

# Include/exclude patterns
include = ["*.py"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

# Ignore specific rules (add more as needed)
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "SIM108",
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"api/main.py" = ["E402"]

[tool.ruff.format]
# Use double quotes
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Use trailing commas
skip-magic-trailing-comma = false
# Line ending style
line-ending = "auto"

[tool.pytest.ini_options]
# Test discovery patterns
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Add current directory to pythonpath
pythonpath = ["."]
# Output options
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
# Markers
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
